--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -34,6 +34,7 @@ runs:
 
     - name: Install Python dependencies via Poetry
       shell: bash
+      working-directory: site
       run: |
         poetry install --no-interaction --no-root
 
