--- a/site/pyproject.toml
+++ b/site/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Beck <164545837+validbeck@users.noreply.github.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.12"
 
 # Core ValidMind + LLM support (merged into one line in Poetry)
 validmind = { version = "*", extras = ["llm"] }
