--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -41,7 +41,7 @@ runs:
     - name: Register validmind kernel
       shell: bash
       run: |
-        python -m ipykernel install --user --name validmind --display-name "ValidMind Library"
+        poetry run python -m ipykernel install --user --name validmind --display-name "ValidMind Library"
 
     - name: Ensure dev.env file is available
       shell: bash
