--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,12 @@ aequitas = "*"
 shap = "0.44.1"
 anywidget = "*"
 ipykernel = "*"
+kaleido = "*"
+scipy = "1.10.1"
+pandas = "*"
+scikit-learn = "*"
+matplotlib = "*"
+plotly = "*"
 
 [build-system]
 requires = ["poetry-core"]
