--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -37,10 +37,10 @@ runs:
       run: |
         poetry install --no-interaction --no-root
 
-    - name: Register validmind kernel
-      shell: bash
-      run: |
-        poetry run python -m ipykernel install --user --name validmind --display-name "ValidMind Library"
+    # - name: Register validmind kernel
+    #   shell: bash
+    #   run: |
+    #     poetry run python -m ipykernel install --user --name validmind --display-name "ValidMind Library"
 
     - name: Ensure dev.env file is available
       shell: bash
