--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,17 @@ validmind = { version = "*", extras = ["llm"] }
 fairlearn = "*"
 shap = "0.44.1"
 anywidget = "*"
-ipykernel = "*"
 kaleido = "*"
 scipy = "1.10.1"
 pandas = "*"
 scikit-learn = "*"
 matplotlib = "*"
 plotly = "*"
+ipykernel = "*"
+traitlets = "*"
+tornado = "*"
+pyzmq = "*"
+debugpy = "*"
 
 [build-system]
 requires = ["poetry-core"]
