--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -12,6 +12,14 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Free disk space
+      run: |
+        echo "Disk space before cleanup:"
+        df -h
+        sudo rm -rf /usr/share/dotnet /opt/ghc /usr/local/share/boost /usr/lib/jvm /opt/hostedtoolcache/go /opt/hostedtoolcache/CodeQL
+        echo "Disk space after cleanup:"
+        df -h
+
     - name: Cache pip dependencies
       uses: actions/cache@v4
       with:
