--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -13,6 +13,7 @@ runs:
   using: "composite"
   steps:
     - name: Free disk space
+      shell: bash
       run: |
         echo "Disk space before cleanup:"
         df -h
