--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -31,9 +31,10 @@ runs:
       run: |
         pip install validmind
         pip install validmind[llm]
-        pip install fairlearn aequitas
-        pip install shap==0.44.1
-        pip install anywidget
+
+    - name: Install additional frozen dependencies
+      shell: bash
+      run: pip install -r requirements.txt
 
     - name: Register validmind kernel
       shell: bash
