--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -63,24 +63,24 @@ runs:
             exit 1;
           }
 
-    - name: Ensure valid.env file is available
-      shell: bash
-      id: find_valid_env
-      run: |
-        if [ ! -f "${{ inputs.valid_env }}" ]; then
-          echo "Error: valid.env file not found at ${{ inputs.valid_env }}"
-          exit 1
-        fi
+    # - name: Ensure valid.env file is available
+    #   shell: bash
+    #   id: find_valid_env
+    #   run: |
+    #     if [ ! -f "${{ inputs.valid_env }}" ]; then
+    #       echo "Error: valid.env file not found at ${{ inputs.valid_env }}"
+    #       exit 1
+    #     fi
 
-    - name: Execute ONLY the ValidMind for model validation series with heap development
-      shell: bash
-      if: ${{ steps.find_valid_env.outcome == 'success' }}
-      run: |
-          cd site
-          cp ../${{ inputs.valid_env }} ../.env
-          source ../.env
-          quarto render --profile exe-demo notebooks/EXECUTED/model_validation &> render_errors.log || {
-            echo "Execute for ValidMind for model validation series failed";
-            cat render_errors.log;
-            exit 1;
-          }
+    # - name: Execute ONLY the ValidMind for model validation series with heap development
+    #   shell: bash
+    #   if: ${{ steps.find_valid_env.outcome == 'success' }}
+    #   run: |
+    #       cd site
+    #       cp ../${{ inputs.valid_env }} ../.env
+    #       source ../.env
+    #       quarto render --profile exe-demo notebooks/EXECUTED/model_validation &> render_errors.log || {
+    #         echo "Execute for ValidMind for model validation series failed";
+    #         cat render_errors.log;
+    #         exit 1;
+    #       }
