--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ defusedxml==0.7.1
 distlib==0.3.8
 distro==1.9.0
 dnspython==2.6.1
-dotenv==0.0.5
+python-dotenv==1.0.1
 ecos==2.0.12
 einops==0.7.0
 ematplotlib==1.0.4
