workaround: Disabling notebook execution

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -47,50 +47,51 @@ jobs:
           exit 1;
           }
           make generate-sitemap
+
     # See if site/notebooks/ has updates
     # Checks the current PR branch against the target branch
-    - name: Filter changed files
-      uses: dorny/paths-filter@v2
-      id: filter
-      with:
-        base: ${{ github.event.pull_request.base_ref }}
-        ref: ${{ github.head_ref }}
-        filters: |
-          notebooks:
-            - 'site/notebooks/EXECUTED/**'
+    # - name: Filter changed files
+    #   uses: dorny/paths-filter@v2
+    #   id: filter
+    #   with:
+    #     base: ${{ github.event.pull_request.base_ref }}
+    #     ref: ${{ github.head_ref }}
+    #     filters: |
+    #       notebooks:
+    #         - 'site/notebooks/EXECUTED/**'
 
     # If yes then create the dev.env file for use in execution step
-    - name: Create dev.env file
-      if: steps.filter.outputs.notebooks == 'true'
-      id: create_dev_env
-      run: |
-        touch dev.env
-        echo VM_API_HOST=${{ secrets.PLATFORM_API_HOST }} >> dev.env
-        echo VM_API_KEY=${{ secrets.PLATFORM_API_KEY }} >> dev.env
-        echo VM_API_SECRET=${{ secrets.PLATFORM_API_SECRET }} >> dev.env
-        echo VM_API_MODEL=${{ secrets.PLATFORM_DEV_MODEL }} >> dev.env
-        cat dev.env
+    # - name: Create dev.env file
+    #   if: steps.filter.outputs.notebooks == 'true'
+    #   id: create_dev_env
+    #   run: |
+    #     touch dev.env
+    #     echo VM_API_HOST=${{ secrets.PLATFORM_API_HOST }} >> dev.env
+    #     echo VM_API_KEY=${{ secrets.PLATFORM_API_KEY }} >> dev.env
+    #     echo VM_API_SECRET=${{ secrets.PLATFORM_API_SECRET }} >> dev.env
+    #     echo VM_API_MODEL=${{ secrets.PLATFORM_DEV_MODEL }} >> dev.env
+    #     cat dev.env
 
     # If yes then create the valid.env file for use in execution step
-    - name: Create valid.env file
-      if: steps.filter.outputs.notebooks == 'true'
-      id: create_valid_env
-      run: |
-        touch valid.env
-        echo VM_API_HOST=${{ secrets.PLATFORM_API_HOST }} >> valid.env
-        echo VM_API_KEY=${{ secrets.PLATFORM_API_KEY }} >> valid.env
-        echo VM_API_SECRET=${{ secrets.PLATFORM_API_SECRET }} >> valid.env
-        echo VM_API_MODEL=${{ secrets.PLATFORM_VALID_MODEL }} >> valid.env
-        cat valid.env
+    # - name: Create valid.env file
+    #   if: steps.filter.outputs.notebooks == 'true'
+    #   id: create_valid_env
+    #   run: |
+    #     touch valid.env
+    #     echo VM_API_HOST=${{ secrets.PLATFORM_API_HOST }} >> valid.env
+    #     echo VM_API_KEY=${{ secrets.PLATFORM_API_KEY }} >> valid.env
+    #     echo VM_API_SECRET=${{ secrets.PLATFORM_API_SECRET }} >> valid.env
+    #     echo VM_API_MODEL=${{ secrets.PLATFORM_VALID_MODEL }} >> valid.env
+    #     cat valid.env
 
     # Only execute the demo notebooks for training if .env files are created
-    - name: Execute demo ValidMind for model development and validation series
-      if: ${{ vars.ENABLE_DEMO_NOTEBOOK == 'true' && steps.create_dev_env.outcome == 'success' && steps.create_valid_env.outcome == 'success' }}
-      uses: ./.github/actions/demo-notebook
-      id: execute-demo-notebook
-      with:
-        dev_env: dev.env
-        valid_env: valid.env
+    # - name: Execute demo ValidMind for model development and validation series
+    #   if: ${{ vars.ENABLE_DEMO_NOTEBOOK == 'true' && steps.create_dev_env.outcome == 'success' && steps.create_valid_env.outcome == 'success' }}
+    #   uses: ./.github/actions/demo-notebook
+    #   id: execute-demo-notebook
+    #   with:
+    #     dev_env: dev.env
+    #     valid_env: valid.env
 
     - name: Test for warnings or errors
       run: |
