--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -31,9 +31,16 @@ runs:
       run: |
         pip install validmind
         pip install validmind[llm]
-        pip install fairlearn aequitas
-        pip install shap==0.44.1
-        pip install anywidget
+
+    - name: Install validmind for notebook execution
+      shell: bash
+      run: |
+        pip install poetry
+        git clone https://github.com/validmind/validmind-library.git
+        cd validmind-library
+        poetry export --without-hashes --format=requirements.txt > requirements.txt
+        pip install -r requirements.txt
+        cd ..
 
     - name: Register validmind kernel
       shell: bash
