--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -35,7 +35,7 @@ runs:
     - name: Install validmind for notebook execution
       shell: bash
       run: |
-        pip install poetry
+        pip install poetry==1.7.1
         git clone https://github.com/validmind/validmind-library.git
         cd validmind-library
         poetry export --without-hashes --format=requirements.txt > requirements.txt
