Oh my god, I figured it out

--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -32,7 +32,7 @@ runs:
         pip install validmind
         pip install validmind[llm]
 
-    - name: Install validmind for notebook execution
+    - name: Install dependencies from validmind-library
       shell: bash
       run: |
         pip install poetry==1.7.1
