Improving poetry caching

--- a/.github/actions/demo-notebook/action.yml
+++ b/.github/actions/demo-notebook/action.yml
@@ -32,15 +32,30 @@ runs:
         pip install validmind
         pip install validmind[llm]
 
+    - name: Clone validmind-library
+      shell: bash
+      run: |
+        git clone https://github.com/validmind/validmind-library.git
+        cp validmind-library/poetry.lock poetry.lock
+
+    - name: Cache validmind-library poetry install
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cache/pypoetry
+          ~/.cache/pip
+        key: validmind-library-${{ runner.os }}-${{ hashFiles('poetry.lock') }}
+        restore-keys: |
+          validmind-library-${{ runner.os }}-
+
     - name: Install dependencies from validmind-library
       shell: bash
       run: |
         pip install poetry==1.7.1
-        git clone https://github.com/validmind/validmind-library.git
         cd validmind-library
-        poetry export --without-hashes --format=requirements.txt > requirements.txt
-        pip install -r requirements.txt
+        poetry export --without-hashes --format=requirements.txt > ../requirements.txt
         cd ..
+        pip install -r requirements.txt
 
     - name: Register validmind kernel
       shell: bash
