Change cookie consent to implied

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -17,7 +17,7 @@ website:
   favicon: validmind.png
   title: "ValidMind"
   cookie-consent:
-    type: express
+    type: implied
     style: simple
   google-analytics: 
     tracking-id: "G-S46CKWPNSS"
