--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -14,7 +14,7 @@ website:
   announcement: 
     content: "[**{{< fa book-open-reader >}} EU AI Act Compliance**](https://validmind.com/download-whitepaper-the-eu-ai-act/) — Read our original regulation brief on how the EU AI Act aims to balance innovation with safety and accountability, setting standards for responsible AI use" 
     position: below-navbar 
-  favicon: validmind.png
+  favicon: favicon.svg
   title: "ValidMind"
   cookie-consent:
     type: express
@@ -30,7 +30,7 @@ website:
 
   navbar:
     collapse-below: xl
-    logo: about/ValidMind-logo-color.svg
+    logo: logo.svg
     background: white
     title: false
     pinned: true
