Rename pre-render script, add configurable product name, store SVG files in config.json

--- a/site/_quarto-docker.yml
+++ b/site/_quarto-docker.yml
@@ -7,7 +7,7 @@ profile:
 # Project settings with pre-render and post-render steps for Docker
 project:
   type: website
-  pre-render: scripts/modify_urls.sh
+  pre-render: scripts/make_configurable.sh
   post-render: bash -c "git restore _variables.yml >/dev/null 2>&1 && echo 'Restored _variables.yml'"
 
 # HTML format configuration
