--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,5 @@ release-scripts/__pycache__
 # Installation source tracked in private repository
 site/installation
 
-# Generated file for Docker profile
-site/config.json
+# Generated K8s manifest for Docker profile
+site/validmind-docs.yaml
