Update logo references, product name

--- a/site/_variables.yml
+++ b/site/_variables.yml
@@ -17,7 +17,7 @@
 validmind:
   platform: "ValidMind Platform"
   developer: "ValidMind Library"
-  product: "ValidMind AI risk platform"
+  product: "ValidMind AI Risk Platform"
   vpv: "Virtual Private ValidMind"
   api: "ValidMind Library Python API"
   legal: "ValidMind Inc."
