--- a/site/_quarto-docker.yml
+++ b/site/_quarto-docker.yml
@@ -8,7 +8,7 @@ profile:
 project:
   type: website
   pre-render: scripts/make_configurable.sh
-  post-render: bash -c "git restore _variables.yml >/dev/null 2>&1 && echo 'Restored _variables.yml'"
+  post-render: bash -c "git restore _variables.yml _quarto.yml >/dev/null 2>&1 && echo 'Restored _variables.yml and _quarto.yml'"
 
 # HTML format configuration
 format:
@@ -16,4 +16,3 @@ format:
     # Include scripts and other resources in the header
     include-in-header: 
       - environments/heap-production.html
-      - zendesk-chat.html
