--- a/kind-config.yaml
+++ b/kind-config.yaml
@@ -9,5 +9,6 @@ nodes:
       kubeletExtraArgs:
         node-labels: "ingress-ready=true"
   extraPortMappings:
-  - containerPort: 80
-    hostPort: 4444 
+  - containerPort: 30080
+    hostPort: 4444
+    protocol: TCP 
