Create rebrandable docs site with K8s manifest configuration (#782)
* Use generic favicon and logo names, change favicon to SVG

* Delete old logo

* Rename pre-render script, add configurable product name, store SVG files in config.json

* Pre-render script tweaks

* Switch Docker profile to K8s manifest file

* Update .gitignore

* Minor Docker script reformatting

* Delete old validmind-docs.yaml

* Fix bug to extract only validmind.product from _variables.yml

* Update logo references, product name

* Change cookie consent to implied

* Add main web site title to configurable items

* Switch Dockerfile to validmind-docs.yaml

* Change Dockerfile to use manifest, minor output tweak

* Switch back to express cookie consent

* Restore _quarto.yml after rendering

* Add short product name to configurable values

* Better variable names

* Deal with special &#8203; character that børks sed

* Make sed commands platform-specific for macOS and Ubuntu

* Add Kind config, deployment manifest, new make action

* Fix port mapping, add kind-restart action

* Reorder Makefile

* Update README.md

* Remove generated validmind-docs.yaml from .gitignore so we have an example

* Add example from testing to validmind-docs.yaml

--- a/site/Makefile
+++ b/site/Makefile
@@ -13,7 +13,7 @@ SRC_ROOT := _source
 SRC_DIR := $(SRC_ROOT)/validmind-library
 
 # Define .PHONY target for help section
-.PHONY: help clean clone copy-installation delete-demo-branch deploy-demo-branch deploy-prod deploy-staging docker-build docker-serve docker-site docker-site-lite docs-site execute generate-sitemap get-source notebooks python-docs release-notes test-descriptions yearly-releases
+.PHONY: help clean clone copy-installation delete-demo-branch deploy-demo-branch deploy-prod deploy-staging docker-build docker-serve docker-site docker-site-lite docs-site execute generate-sitemap get-source kind-serve kind-stop kind-restart kind-logs notebooks python-docs release-notes test-descriptions yearly-releases
 
 # Help section
 help:
@@ -35,6 +35,10 @@ help:
 	@echo "  generate-sitemap     Generate a sitemap for the static HTML site"
 	@echo "  execute              Execute a Jupyter Notebook or notebook directory"
 	@echo "  get-source           Get all source files (clean, clone, copy-installation, notebooks, python-docs, test-descriptions)"
+	@echo "  kind-serve           Set up Kind cluster for ValidMind docs"
+	@echo "  kind-stop            Stop Kind cluster for ValidMind docs"
+	@echo "  kind-restart         Restart Kind cluster for ValidMind docs"
+	@echo "  kind-logs            Show logs from ValidMind docs pod"
 	@echo "  notebooks            Copy Jupyter notebooks into notebooks/"
 	@echo "  python-docs          Copy the Python library docs into validmind/"
 	@echo "  release-notes        Generate release notes from pull requests since latest tag and update releases sidebar"
@@ -109,6 +113,7 @@ docker-build: docker-site-lite
 	@echo "\nBuilding the Docker image ..."
 	@docker build -f ../Dockerfile -t validmind-docs ..
 
+# Requires that you've run `make docker-build`
 docker-serve:
 	@echo "\nStarting the Docker container on http://localhost:4444/ ..."
 	@docker run -p 4444:80 validmind-docs
@@ -236,10 +241,40 @@ generate-sitemap:
 	@rm sitemap.urls.tmp
 	@echo "Sitemaps generated at _site/sitemap.xml and _site/sitemap.html"
 
-
-
 # Get all source files
 get-source: clean clone copy-installation notebooks python-docs test-descriptions
+
+# Requires that you've run `make docker-build`
+kind-serve:
+	@echo "\nSetting up Kind cluster for ValidMind docs ..."
+	@if ! kind get clusters | grep -q validmind-docs; then \
+		echo "Creating Kind cluster 'validmind-docs' ..."; \
+		kind create cluster --name validmind-docs --config ../kind-config.yaml; \
+	else \
+		echo "Kind cluster 'validmind-docs' already exists"; \
+	fi
+	@echo "Loading Docker image into Kind cluster ..."
+	@kind load docker-image validmind-docs --name validmind-docs
+	@echo "Applying Kubernetes manifests ..."
+	@kubectl config use-context kind-validmind-docs
+	@kubectl create namespace cmvm-test --dry-run=client -o yaml | kubectl apply -f -
+	@kubectl apply -f validmind-docs.yaml
+	@kubectl apply -f ../validmind-docs-deployment.yaml
+	@echo "\nValidMind docs is now running in Kind cluster!"
+	@echo "Access it at: http://localhost:4444/"
+	@echo "To stop: make kind-stop"
+
+kind-stop:
+	@echo "\nStopping Kind cluster 'validmind-docs' ..."
+	@kind delete cluster --name validmind-docs || echo "Cluster may not exist"
+	@echo "Kind cluster stopped."
+
+kind-restart: kind-stop kind-serve
+
+kind-logs:
+	@echo "\nShowing logs from ValidMind docs pod ..."
+	@kubectl config use-context kind-validmind-docs
+	@kubectl logs -l app=validmind-docs -n cmvm-test --tail=50 -f
 
 # Copy over Jupyter notebooks and supporting files
 notebooks:
