--- a/.github/workflows/ai_explain.yaml
+++ b/.github/workflows/ai_explain.yaml
@@ -6,19 +6,19 @@ permissions:
 
 on:
   pull_request:
-    types: [review_requested]
+    types: [opened, synchronize]
 
 jobs:
   explain-pr:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
@@ -29,7 +29,7 @@ jobs:
       - name: Explain PR
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_PR_SUMMARY_KEY }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_REF: ${{ github.ref }}
         run: python .github/workflows/ai_explain.py
