Re-add generated validmind-docs.yaml file to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ release-scripts/__pycache__
 # Installation source tracked in private repository
 site/installation
 
+# Generated ConfigMap for Docker profile
+/site/validmind-docs.yaml
