Update readme with better testing instructions and example

--- a/site/custom-validmind-docs.yaml
+++ b/site/custom-validmind-docs.yaml
@@ -6,8 +6,8 @@ metadata:
 data:
   VALIDMIND_URL: "https://app.staging.validmind.ai"
   JUPYTERHUB_URL: "https://jupyterhub.validmind.ai"
-  PRODUCT_NAME_LONG: "Model Governance Risk Platform Product"
-  PRODUCT_NAME_SHORT: "Governance Product"
+  PRODUCT_NAME_LONG: "Model Governance Risk Platform"
+  PRODUCT_NAME_SHORT: "Model Governance"
   LOGO_SVG: |
     <?xml version="1.0" encoding="UTF-8"?>
     <svg xmlns="http://www.w3.org/2000/svg" width="719" height="124" viewBox="0 0 719 124" fill="none">
