Add pages for repo-level release notes

--- a/site/releases/_sidebar.yaml
+++ b/site/releases/_sidebar.yaml
@@ -4,10 +4,14 @@ website:
       title: "Releases"
       contents:
         - releases/all-releases.qmd
+        - releases/validmind-library-releases.qmd
+        - releases/validmind-platform-releases.qmd
+        - releases/documentation-releases.qmd
+        - text: "---"
         - text: "Breaking changes & deprecations"
           file: releases/breaking-changes/breaking-changes.qmd
         - text: "---"
-        - text: "Releases by Date"
+        - text: " Releases by Date"
         # MAKE-RELEASE-NOTES-EMBED-MARKER
         - releases/2025/2025-apr-24/release-notes.qmd
         - releases/2025/2025-mar-07/release-notes.qmd
