--- a/site/releases/_sidebar.yaml
+++ b/site/releases/_sidebar.yaml
@@ -11,7 +11,7 @@ website:
         - text: "Breaking changes & deprecations"
           file: releases/breaking-changes/breaking-changes.qmd
         - text: "---"
-        - text: " Releases by Date"
+        - text: "Previous releases by date"
         # MAKE-RELEASE-NOTES-EMBED-MARKER
         - releases/2025/2025-apr-24/release-notes.qmd
         - releases/2025/2025-mar-07/release-notes.qmd
