[SC-10335] Repo Sync repo-sync/7325 (2025-06-27) (#786)
* chore: reposync 7325

* Delete .github/workflows/release_notes_check.yml

---------

Co-authored-by: Nik Richers <nik@validmind.ai>

--- a/.github/workflows/release_notes_check.yaml
+++ b/.github/workflows/release_notes_check.yaml
@@ -4,19 +4,23 @@ on:
   pull_request:
     types: [opened, synchronize, labeled, unlabeled, edited, ready_for_review]
 
+permissions:
+  contents: read
+  pull-requests: read
+
 jobs:
   ci_check:
     runs-on: ubuntu-latest
     if: github.event.pull_request.draft == false
 
     steps:
-      - name: Check out repository
+      - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'
+          python-version: "3.9"
 
       - name: Install dependencies
         run: pip install PyGithub pyyaml
